--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-leaflet": "^4.2.1",
+    "react-query": "^3.39.3",
     "react-redux": "^8.1.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
     "redux": "^4.2.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
